exports[`test presents a user 1`] = `
Object {
  "avatarUrl": "http://example.com/avatar.png",
  "id": "123",
  "name": "Test User",
  "username": "testuser"
}
`;

exports[`test presents a user without slack data 1`] = `
Object {
  "avatarUrl": null,
  "id": "123",
  "name": "Test User",
  "username": "testuser"
}
`;
